# sprachwerk

./: .env.example  .gitignore  AUTOSCAN_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt  test_audio_selection.py
src/: __init__.py
src/audio/: __init__.py  base_audio_capture.py  capture.py  preprocessing.py  system_audio_capture.py
src/core/: __init__.py  app.py  config.py  processing_modes.py
src/processing/: __init__.py  alignment.py  diarization.py  embedding_extractor.py  speaker_clustering.py  speaker_identification.py  transcription.py
src/utils/: audio_device_manager.py  cli_helpers.py  interactive_menu.py  key_input.py  model_manager.py  output_formatter.py  speaker_manager.py  warning_suppressor.py
tools/: download_speechbrain_models.py  fix_audio.py  record_system_audio.py
