[project]
name = "sprachwerk"
version = "0.1.0"
description = "Offline speech transcription with speaker diarization using Whisper and SpeechBrain ECAPA-TDNN"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core transcription dependencies
    "faster-whisper>=1.0.0",
    "speechbrain>=0.5.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    # Audio processing
    "sounddevice>=0.4.0",
    "librosa>=0.10.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "PyAudioWPatch>=0.2.12",
    # Clustering and machine learning
    "scikit-learn>=1.3.0",
    # Output formatting and CLI
    "colorama>=0.4.6",
    "pycaw",
    "comtypes",
]

[project.scripts]
sprachwerk = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
